--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "BOT": {
-    "NAME": "Azure 小助手",
+    "NAME": "Azure开机小助手",
     "TOKEN": "5213714055:AAFsPAytjse-rw1xmN34d8UZnZdZreQCorc",
     "ADMINS": [1926775844]
   },
